<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp">
        <EditText
            android:id="@+id/distanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text"
            android:hint="@string/distance_hint"
            android:autofillHints="5"
            android:textSize="17sp"
            android:padding="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp">
        <EditText
            android:id="@+id/priceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text"
            android:hint="@string/price_hint"

   android:autofillHints="5"         android:textSize="17sp"
            android:padding="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp">
        <EditText
            android:id="@+id/autonomyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text"
            android:hint="@string/autonomy_hint"
            android:autofillHints="5"
            android:textSize="17sp"
            android:padding="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autonomy_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="35dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_initial_text"
            android:textAlignment="center"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonCalcSpent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:padding="20dp"
        android:text="@string/calc_button_label"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="5dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</LinearLayout>